--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Nunito:wght@300;400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
-
+		<meta name="robots" content="noindex,nofollow" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Mike and Miwha's Wedding Website" />
